# aps

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-42ffa192-7d38-448a-8f3b-4f861bf136ce.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-04T11-23-16-524Z.json
src/: auth.rs  cli.rs  common.rs  costs.rs  main.rs  profiles.rs  ui.rs  usage.rs
