[package]
name = "aps"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for switching between Claude Code and Codex auth profiles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
inquire = "0.7"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
fslock = "0.2"
rayon = "1"
directories = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
toml = "0.8"
security-framework = "3"
sha2 = "0.10"
rand = "0.8"
tiny_http = "0.12"
open = "5"
comfy-table = { version = "=7.1.1", features = ["custom_styling"] }
